get user by usn
